8180575: Null pointer dereference in LoadNode::Identity()

Fixed a missing null check on the return value of AddPNode::Ideal_base_and_offset() found by Parfait.

Reviewed-by: kvn